@@ -1,8 +1,10 @@
 - Add support for SMTP AUTH CRAM-MD5
 
-- Add support for SMTPS
-
-- Add support for SMTP STARTTLS
+- SSL/TLS support:
+  - Add configure option
+  - Add certificate verification unless --ssl-insecure
+  - Move most SSL code into separate source
+  - Add support for STARTTLS
 
 - Convert all proto modules to use timedout reads.
 
