@@ -2,6 +2,8 @@ This file lists all the major user-visible changes to nullmailer.
 -------------------------------------------------------------------------------
 Changes in version 1.10
 
+- Added support for SMTPS (SMTP over SSL/TLS).
+
 - Added support for auto-detection of login method in SMTP protocol.
 
 Development of this version has been sponsored by FutureQuest, Inc.
